--- a/tasks/2-build-tensorflow-model-push.yaml
+++ b/tasks/2-build-tensorflow-model-push.yaml
@@ -73,51 +73,33 @@ spec:
         set -x
         cd $(params.source-dir)
         git checkout $(params.git-revision)
-    - name: build
-      image: $(params.BUILDER_IMAGE)
+    - name: train-model
+      image: quay.io/j0hnniewa1ker/kubeflow
       workingDir: $(params.source-dir)
-      env:
-        - name: REGISTRY_USER
-          valueFrom:
-            secretKeyRef:
-              name: registry-access
-              key: REGISTRY_USER
-              optional: true
-        - name: REGISTRY_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: registry-access
-              key: REGISTRY_PASSWORD
-              optional: true
-        - name: IBM_ENTITLED_REGISTRY_USER
-          valueFrom:
-            secretKeyRef:
-              name: ibm-entitled-registry-credentials
-              key: IBM_ENTITLED_REGISTRY_USER
-              optional: true
-        - name: IBM_ENTITLED_REGISTRY_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: ibm-entitled-registry-credentials
-              key: IBM_ENTITLED_REGISTRY_PASSWORD
-              optional: true
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
       securityContext:
         privileged: true
       script: |
-        APP_IMAGE="$(params.image-server)/$(params.image-namespace)/$(params.image-repository):$(params.image-tag)"
-        if [[ -n "${IBM_ENTITLED_REGISTRY_USER}" ]] && [[ -n "${IBM_ENTITLED_REGISTRY_PASSWORD}" ]]; then
-          buildah login -u ${IBM_ENTITLED_REGISTRY_USER} -p ${IBM_ENTITLED_REGISTRY_PASSWORD} cp.icr.io
-          echo "buildah login -u \"${IBM_ENTITLED_REGISTRY_USER}\" -p \"xxxxx\" cp.icr.io"
-        fi
-        buildah --layers --storage-driver=$(params.STORAGE_DRIVER) bud --format=$(params.FORMAT) --tls-verify=$(params.TLSVERIFY) -f $(params.DOCKERFILE) -t ${APP_IMAGE} $(params.CONTEXT)
-        set +x
-        if [[ -n "${REGISTRY_USER}" ]] && [[ -n "${REGISTRY_PASSWORD}" ]] && [[ "$(params.image-server)" != "image-registry.openshift-image-registry.svc:5000"  ]]; then
-          buildah login -u "${REGISTRY_USER}" -p "${REGISTRY_PASSWORD}" "$(params.image-server)"
-          echo "buildah login -u \"${REGISTRY_USER}\" -p \"xxxxx\" \"$(params.image-server)\""
-        fi
-
-        set -x
-        buildah --storage-driver=$(params.STORAGE_DRIVER) push --tls-verify=$(params.TLSVERIFY) --digestfile ./image-digest ${APP_IMAGE} docker://${APP_IMAGE}
+        echo Pre-process
+        python preprocessing.py --data_dir=/root/data 
+        echo Train
+        python train.py --data_dir=/root/data 
+        export MNIST_PATH=$(cat /workspace/kubeflow-mnist/output.txt) && \
+          tar -czvf /var/lib/containers/kubeflow-mnist.tar.gz $MNIST_PATH
+    - name: push-artifactory
+      image: $(params.BUILDER_IMAGE)
+      volumeMounts:
+        - mountPath: /var/lib/containers
+          name: varlibcontainers
+      envFrom:
+      - secretRef:
+          name: artifactory-access
+      command:
+      - /bin/sh
+      args:
+      - -c
+      - |
+        echo "Upload kubeflow-mnist.tar.gz to Artifactory"
+        curl -u ${ARTIFACTORY_USER}:${ARTIFACTORY_ENCRYPT} -T /var/lib/containers/kubeflow-mnist.tar.gz "$(ARTIFACTORY_URL)/artifactory/generic-local/kubeflow-mnist.tar.gz"
